# ngx-rust

./: .dockerignore  .git-blame-ignore-revs  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: cargo-deny.yaml  ci.yaml  fossa.yaml  nginx.yaml  sanitizers.yaml
examples/: Cargo.toml  async.rs  async_request.rs  awssig.rs  config  curl.rs  httporigdst.rs  shared_dict.rs  subrequest.rs  tokio.conf  tokio.rs  upstream.rs
examples/auto/: rust
examples/t/: async_request.t  awssig.t  shared_dict.t  subrequest.t  tokio.t
misc/: lsan-suppressions.txt  nginx-sanitizer-support.patch  ubsan-suppressions.txt
nginx-src/: Cargo.toml  README.md
nginx-src/libnginx/: config  config.make  libnginx.c  libnginx.h
nginx-src/src/: download.rs  lib.rs  verifier.rs
nginx-sys/: Cargo.toml  README.md
nginx-sys/src/: core.rs  detail.rs  event.rs  http.rs  lib.rs  mail.rs  queue.rs  rbtree.rs  stream.rs  string.rs
nginx-sys/src/core/: queue.rs  rbtree.rs  string.rs
nginx-unittest/: Cargo.toml
nginx-unittest/src/: lib.rs
src/: allocator.rs  event.rs  lib.rs  log.rs  sync.rs
src/async_/: mod.rs  resolver.rs  sleep.rs  spawn.rs
src/collections/: mod.rs  queue.rs  rbtree.rs
src/core/: conf.rs  mod.rs  pool.rs  slab.rs  status.rs  string.rs
src/http/: async_request.rs  conf.rs  mod.rs  module.rs  request.rs  request_context.rs  status.rs  subrequest.rs  upstream.rs
src/log/: interop.rs
tests/: conditional-compilation.rs  core_conf_test.rs  log_test.rs  nginx.conf
