[package]
name = "nginx-unittest"
version = "0.1.0"
categories = ["external-ffi-bindings"]
description = "Additional FFI bindings to NGINX for unit tests"
keywords = ["nginx", "ffi", "sys"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
nginx-sys = { path = "../nginx-sys", version = "0.5.0", features = [
    "unittest",
] }
